--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -184,6 +183,73 @@
             android:gravity="center"
             android:padding="10dp"
             android:text="测试对象"
+            android:textColor="@color/color_text"
+            android:textSize="16dp" />
+
+
+        <TextView
+            android:id="@+id/tvDimen"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@color/color_bg"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="分辨率对比"
+            android:textColor="@color/color_text"
+            android:textSize="16dp" />
+
+
+
+        <TextView
+            android:id="@+id/tvReturn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@color/color_bg"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="测试Return"
+            android:textColor="@color/color_text"
+            android:textSize="16dp" />
+
+
+        <TextView
+            android:id="@+id/tvBold"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@color/color_bg"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="测试TextView加粗效果"
+            android:textColor="@color/color_text"
+            android:textSize="16dp" />
+
+
+        <TextView
+            android:id="@+id/tvClone"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@color/color_bg"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="测试对象Clone方法"
+            android:textColor="@color/color_text"
+            android:textSize="16dp" />
+
+
+
+        <TextView
+            android:id="@+id/tvFanshe"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@color/color_bg"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="测试反射"
             android:textColor="@color/color_text"
             android:textSize="16dp" />
     </LinearLayout>
