--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="color_bg">#000000</color>
     <color name="color_text">#ffffff</color>
 
+    <color name="color_white">#ffffff</color>
+
 
 
 </resources>
