增加AIDL测试类

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -265,6 +265,34 @@
             android:text="测试内存"
             android:textColor="@color/color_text"
             android:textSize="16dp" />
+
+
+
+        <TextView
+            android:id="@+id/tvService"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@color/color_bg"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="测试服务"
+            android:textColor="@color/color_text"
+            android:textSize="16dp" />
+
+
+        <TextView
+            android:id="@+id/tvAidl"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:background="@color/color_bg"
+            android:gravity="center"
+            android:padding="10dp"
+            android:text="测试AIDL"
+            android:textColor="@color/color_text"
+            android:textSize="16dp" />
+
     </LinearLayout>
 
 
